@@ -1,5 +1,19 @@
 <h1>News</h1>
 
+<h2>Version 0.8.1</h2>
+
+<p>
+Xjadeo version 0.8.1 is mainly a hotfix release addressing remote control issues with Mac/OSX 10.10.
+It also adds a simple file-open dialog for the GNU/Linux X11 platform.
+</p>
+
+<p>
+Apart from that, there are a few cosmetic changes and typographic updates to the application 
+as well as the documentation.
+A complete list of changes is available as <a href="https://github.com/x42/xjadeo/commits/master">Git Commit Log</a>.
+</p>
+
+
 <h2>Version 0.8.0</h2>
 
 <p>
